--- a/获取城市.md
+++ b/获取城市.md
@@ -7,13 +7,28 @@ tips:每次最多只会返回100条记录，支持分页查询:
 # 开发参数
   
   key：0
+  
   user：reader
   
-# 
+# 查询条件
 
-# 查询全部
+全部查询：where={}
 
-查询前100条记录
+按省份查询：where={"province":"陕西省"}
+
+按城市查询：where={"province":"西安市"}
+
+# 签名
+sha1(timestamp=1&where={}&key=1)
+
+# 全部查询
+
+
+#### 查询前100条记录
+
+查询条件：where={}
+
+签名：sing=sha1(timestamp=1&where={}&key=1)
 
 ```curl https://service.nonedb.com/nonedb_data/city/find -X POST -d '{"where": {},"timestamp":1,"sign":"e7cebd0027b385eabc1c91c71123afc2c96dfb74"}' --header "Content-Type: application/json" --header "user:reader"```
 
@@ -21,13 +36,31 @@ tips:每次最多只会返回100条记录，支持分页查询:
 {"data":[{"_id":"5eba103a88e95627eac649f6","city":"北京市区","district":"怀柔区","province":"北京市"},{"_id":"5eba103a88e95627eac649f8","city":"天津市区","district":"河东区","province":"天津市"},{"_id":"5eba103a88e95627eac64a00","city":"北京市区","district":"西城区","province":"北京市"},{"_id":"5eba103a88e95627eac64a15","city":"北京市区","district":"门头沟区","province":"北京市"},{"_id":"5eba103a88e95627eac64a42","city":"天津市区","district":"北辰区","province":"天津市"},{"_id":"5eba103a88e95627eac64a56","city":"北京市区","district":"通州区","province":"北京市"},{"_id":"5eba103a88e95627eac64a61","city":"北京市区","district":"密云区","province":"北京市"},{"_id":"5eba103a88e95627eac64a67","city":"石家庄市","district":"长安区","province":"河北省"},{"_id":"5eba103a88e95627eac64a6b","city":"北京市区","district":"平谷区","province":"北京市"},{"_id":"5eba103a88e95627eac64a6d","city":"北京市区","district":"房山区","province":"北京市"},{"_id":"5eba103a88e95627eac64a71","city":"石家庄市","district":"桥西区","province":"河北省"},{"_id":"5eba103a88e95627eac64a74","city":"天津市区","district":"河北区","province":"天津市"},{"_id":"5eba103a88e95627eac64a77","city":"天津市区","district":"西青区","province":"天津市"},{"_id":"5eba103a88e95627eac64a7a","city":"天津市区","district":"宝坻区","province":"天津市"},{"_id":"5eba103a88e95627eac64a7f","city":"北京市区","district":"昌平区","province":"北京市"},{"_id":"5eba103a88e95627eac64a81","city":"北京市区","district":"朝阳区","province":"北京市"},{"_id":"5eba103a88e95627eac64a83","city":"天津市区","district":"宁河区","province":"天津市"},{"_id":"5eba103a88e95627eac64a86","city":"天津市区","district":"津南区","province":"天津市"},{"_id":"5eba103a88e95627eac64a88","city":"北京市区","district":"石景山区","province":"北京市"},{"_id":"5eba103a88e95627eac64a8a","city":"天津市区","district":"蓟州区","province":"天津市"},{"_id":"5eba103a88e95627eac64a8d","city":"天津市区","district":"河西区","province":"天津市"},{"_id":"5eba103a88e95627eac64a91","city":"北京市区","district":"延庆区","province":"北京市"},{"_id":"5eba103a88e95627eac64aa6","city":"北京市区","district":"顺义区","province":"北京市"},{"_id":"5eba103a88e95627eac64aaa","city":"北京市区","district":"海淀区","province":"北京市"},{"_id":"5eba103a88e95627eac64aae","city":"北京市区","district":"丰台区","province":"北京市"},{"_id":"5eba103a88e95627eac64ab0","city":"石家庄市","district":"井陉县","province":"河北省"},{"_id":"5eba103a88e95627eac64ab4","city":"天津市区","district":"和平区","province":"天津市"},{"_id":"5eba103a88e95627eac64ab7","city":"北京市区","district":"大兴区","province":"北京市"},{"_id":"5eba103a88e95627eac64aba","city":"石家庄市","district":"无极县","province":"河北省"},{"_id":"5eba103a88e95627eac64ac5","city":"北京市区","district":"东城区","province":"北京市"},{"_id":"5eba103a88e95627eac64acb","city":"天津市区","district":"南开区","province":"天津市"},{"_id":"5eba103a88e95627eac64acd","city":"天津市区","district":"静海区","province":"天津市"},{"_id":"5eba103b88e95627eac64ad8","city":"石家庄市","district":"元氏县","province":"河北省"},{"_id":"5eba103b88e95627eac64adb","city":"石家庄市","district":"高邑县","province":"河北省"},{"_id":"5eba103b88e95627eac64aea","city":"石家庄市","district":"灵寿县","province":"河北省"},{"_id":"5eba103b88e95627eac64aec","city":"石家庄市","district":"深泽县","province":"河北省"},{"_id":"5eba103b88e95627eac64aee","city":"唐山市","district":"路北区","province":"河北省"},{"_id":"5eba103b88e95627eac64af1","city":"石家庄市","district":"赞皇县","province":"河北省"},{"_id":"5eba103b88e95627eac64b02","city":"石家庄市","district":"赵县","province":"河北省"},{"_id":"5eba103b88e95627eac64b04","city":"石家庄市","district":"裕华区","province":"河北省"},{"_id":"5eba103b88e95627eac64b06","city":"石家庄市","district":"正定县","province":"河北省"},{"_id":"5eba103b88e95627eac64b0f","city":"石家庄市","district":"新乐市","province":"河北省"},{"_id":"5eba103b88e95627eac64b11","city":"石家庄市","district":"辛集市","province":"河北省"},{"_id":"5eba103b88e95627eac64b19","city":"石家庄市","district":"藁城区","province":"河北省"},{"_id":"5eba103b88e95627eac64b1b","city":"唐山市","district":"古冶区","province":"河北省"},{"_id":"5eba103b88e95627eac64b1d","city":"石家庄市","district":"行唐县","province":"河北省"},{"_id":"5eba103b88e95627eac64b20","city":"唐山市","district":"路南区","province":"河北省"},{"_id":"5eba103b88e95627eac64b23","city":"唐山市","district":"开平区","province":"河北省"},{"_id":"5eba103b88e95627eac64b26","city":"石家庄市","district":"平山县","province":"河北省"},{"_id":"5eba103b88e95627eac64b28","city":"石家庄市","district":"鹿泉区","province":"河北省"},{"_id":"5eba103b88e95627eac64b2b","city":"石家庄市","district":"晋州市","province":"河北省"},{"_id":"5eba103b88e95627eac64b2f","city":"石家庄市","district":"栾城区","province":"河北省"},{"_id":"5eba103b88e95627eac64b40","city":"天津市区","district":"滨海新区","province":"天津市"},{"_id":"5eba103b88e95627eac64b42","city":"天津市区","district":"红桥区","province":"天津市"},{"_id":"5eba103b88e95627eac64b4a","city":"天津市区","district":"东丽区","province":"天津市"},{"_id":"5eba103b88e95627eac64b5e","city":"石家庄市","district":"新华区","province":"河北省"},{"_id":"5eba103b88e95627eac64b60","city":"石家庄市","district":"井陉矿区","province":"河北省"},{"_id":"5eba103b88e95627eac64b6e","city":"天津市区","district":"武清区","province":"天津市"},{"_id":"5eba103b88e95627eac64b7a","city":"张家口市","district":"崇礼区","province":"河北省"},{"_id":"5eba103b88e95627eac64b7c","city":"张家口市","district":"康保县","province":"河北省"},{"_id":"5eba103b88e95627eac64b7e","city":"张家口市","district":"万全区","province":"河北省"},{"_id":"5eba103b88e95627eac64b82","city":"张家口市","district":"张北县","province":"河北省"},{"_id":"5eba103b88e95627eac64b84","city":"张家口市","district":"宣化区","province":"河北省"},{"_id":"5eba103b88e95627eac64b86","city":"张家口市","district":"桥东区","province":"河北省"},{"_id":"5eba103b88e95627eac64b89","city":"张家口市","district":"下花园区","province":"河北省"},{"_id":"5eba103b88e95627eac64b99","city":"张家口市","district":"阳原县","province":"河北省"},{"_id":"5eba103b88e95627eac64b9b","city":"张家口市","district":"赤城县","province":"河北省"},{"_id":"5eba103b88e95627eac64b9d","city":"张家口市","district":"蔚县","province":"河北省"},{"_id":"5eba103c88e95627eac64bac","city":"承德市","district":"鹰手营子矿区","province":"河北省"},{"_id":"5eba103c88e95627eac64bae","city":"承德市","district":"双滦区","province":"河北省"},{"_id":"5eba103c88e95627eac64bb1","city":"承德市","district":"双桥区","province":"河北省"},{"_id":"5eba103c88e95627eac64bb4","city":"承德市","district":"宽城满族自治县","province":"河北省"},{"_id":"5eba103c88e95627eac64bb7","city":"承德市","district":"隆化县","province":"河北省"},{"_id":"5eba103c88e95627eac64bcb","city":"唐山市","district":"滦县","province":"河北省"},{"_id":"5eba103c88e95627eac64bce","city":"唐山市","district":"丰南区","province":"河北省"},{"_id":"5eba103c88e95627eac64bde","city":"唐山市","district":"乐亭县","province":"河北省"},{"_id":"5eba103c88e95627eac64be0","city":"唐山市","district":"丰润区","province":"河北省"},{"_id":"5eba103c88e95627eac64be2","city":"唐山市","district":"滦南县","province":"河北省"},{"_id":"5eba103c88e95627eac64bf0","city":"唐山市","district":"曹妃甸区","province":"河北省"},{"_id":"5eba103c88e95627eac64bf9","city":"秦皇岛市","district":"抚宁区","province":"河北省"},{"_id":"5eba103c88e95627eac64bfe","city":"秦皇岛市","district":"山海关区","province":"河北省"},{"_id":"5eba103c88e95627eac64c07","city":"秦皇岛市","district":"卢龙县","province":"河北省"},{"_id":"5eba103c88e95627eac64c0c","city":"秦皇岛市","district":"青龙满族自治县","province":"河北省"},{"_id":"5eba103c88e95627eac64c11","city":"秦皇岛市","district":"昌黎县","province":"河北省"},{"_id":"5eba103c88e95627eac64c23","city":"邯郸市","district":"邯山区","province":"河北省"},{"_id":"5eba103c88e95627eac64c27","city":"唐山市","district":"迁西县","province":"河北省"},{"_id":"5eba103c88e95627eac64c29","city":"秦皇岛市","district":"北戴河区","province":"河北省"},{"_id":"5eba103c88e95627eac64c2c","city":"秦皇岛市","district":"海港区","province":"河北省"},{"_id":"5eba103c88e95627eac64c2f","city":"唐山市","district":"迁安市","province":"河北省"},{"_id":"5eba103c88e95627eac64c42","city":"太原市","district":"小店区","province":"山西省"},{"_id":"5eba103c88e95627eac64c46","city":"太原市","district":"晋源区","province":"山西省"},{"_id":"5eba103c88e95627eac64c4a","city":"太原市","district":"清徐县","province":"山西省"},{"_id":"5eba103c88e95627eac64c4d","city":"衡水市","district":"武邑县","province":"河北省"},{"_id":"5eba103c88e95627eac64c4f","city":"太原市","district":"尖草坪区","province":"山西省"},{"_id":"5eba103c88e95627eac64c51","city":"衡水市","district":"故城县","province":"河北省"},{"_id":"5eba103c88e95627eac64c55","city":"衡水市","district":"景县","province":"河北省"},{"_id":"5eba103c88e95627eac64c59","city":"唐山市","district":"遵化市","province":"河北省"},{"_id":"5eba103c88e95627eac64c5b","city":"衡水市","district":"武强县","province":"河北省"},{"_id":"5eba103c88e95627eac64c5d","city":"衡水市","district":"安平县","province":"河北省"},{"_id":"5eba103c88e95627eac64c5f","city":"太原市","district":"杏花岭区","province":"山西省"}],"result_code":"success","result_des":"查找成功"}
 ```
 
-查询101到200条记录
+####  查询101到200条记录
+
+查询条件： where={}   limit=100 skip=100
+
+签名 sign=sha1(limit=100&skip=100&timestamp=1&where={}&key=1)
+
 
 ```curl https://service.nonedb.com/nonedb_data/city/find -X POST -d '{"limit":100,"skip":100,"where": {},"timestamp":1,"sign":"109b3d7f503968a87e461fe666c56fcb82c9454c"}' --header "Content-Type: application/json" --header "user:reader"```
 
 ```
 {"data":[{"_id":"5eba103c88e95627eac64c74","city":"大同市","district":"南郊区","province":"山西省"},{"_id":"5eba103c88e95627eac64c7e","city":"大同市","district":"灵丘县","province":"山西省"},{"_id":"5eba103c88e95627eac64c8b","city":"邯郸市","district":"永年区","province":"河北省"},{"_id":"5eba103c88e95627eac64c8d","city":"邯郸市","district":"邱县","province":"河北省"},{"_id":"5eba103c88e95627eac64c8f","city":"邯郸市","district":"丛台区","province":"河北省"},{"_id":"5eba103c88e95627eac64c91","city":"邯郸市","district":"峰峰矿区","province":"河北省"},{"_id":"5eba103c88e95627eac64c93","city":"唐山市","district":"玉田县","province":"河北省"},{"_id":"5eba103c88e95627eac64c95","city":"太原市","district":"娄烦县","province":"山西省"},{"_id":"5eba103c88e95627eac64c98","city":"邯郸市","district":"魏县","province":"河北省"},{"_id":"5eba103c88e95627eac64c9a","city":"邯郸市","district":"大名县","province":"河北省"},{"_id":"5eba103c88e95627eac64c9d","city":"邯郸市","district":"涉县","province":"河北省"},{"_id":"5eba103c88e95627eac64c9f","city":"邯郸市","district":"广平县","province":"河北省"},{"_id":"5eba103c88e95627eac64ca1","city":"邯郸市","district":"曲周县","province":"河北省"},{"_id":"5eba103c88e95627eac64ca3","city":"邯郸市","district":"复兴区","province":"河北省"},{"_id":"5eba103c88e95627eac64ca5","city":"邯郸市","district":"鸡泽县","province":"河北省"},{"_id":"5eba103c88e95627eac64ca7","city":"邯郸市","district":"馆陶县","province":"河北省"},{"_id":"5eba103c88e95627eac64caa","city":"邯郸市","district":"成安县","province":"河北省"},{"_id":"5eba103c88e95627eac64cbd","city":"邯郸市","district":"肥乡区","province":"河北省"},{"_id":"5eba103c88e95627eac64cc8","city":"邢台市","district":"桥西区","province":"河北省"},{"_id":"5eba103c88e95627eac64cca","city":"邢台市","district":"任县","province":"河北省"},{"_id":"5eba103c88e95627eac64cd2","city":"邢台市","district":"临西县","province":"河北省"},{"_id":"5eba103c88e95627eac64cd4","city":"邢台市","district":"巨鹿县","province":"河北省"},{"_id":"5eba103c88e95627eac64cd6","city":"保定市","district":"竞秀区","province":"河北省"},{"_id":"5eba103c88e95627eac64cd9","city":"保定市","district":"满城区","province":"河北省"},{"_id":"5eba103c88e95627eac64cdc","city":"邢台市","district":"隆尧县","province":"河北省"},{"_id":"5eba103c88e95627eac64cdf","city":"邢台市","district":"广宗县","province":"河北省"},{"_id":"5eba103c88e95627eac64ce1","city":"保定市","district":"清苑区","province":"河北省"},{"_id":"5eba103c88e95627eac64ce3","city":"邢台市","district":"宁晋县","province":"河北省"},{"_id":"5eba103c88e95627eac64ce5","city":"邢台市","district":"邢台县","province":"河北省"},{"_id":"5eba103c88e95627eac64ceb","city":"邢台市","district":"清河县","province":"河北省"},{"_id":"5eba103c88e95627eac64ced","city":"邢台市","district":"桥东区","province":"河北省"},{"_id":"5eba103c88e95627eac64cef","city":"邢台市","district":"内丘县","province":"河北省"},{"_id":"5eba103c88e95627eac64cf1","city":"保定市","district":"莲池区","province":"河北省"},{"_id":"5eba103c88e95627eac64cf4","city":"邢台市","district":"威县","province":"河北省"},{"_id":"5eba103c88e95627eac64cf7","city":"邢台市","district":"南和县","province":"河北省"},{"_id":"5eba103c88e95627eac64cff","city":"长治市","district":"城区","province":"山西省"},{"_id":"5eba103c88e95627eac64d03","city":"邢台市","district":"临城县","province":"河北省"},{"_id":"5eba103c88e95627eac64d06","city":"阳泉市","district":"盂县","province":"山西省"},{"_id":"5eba103c88e95627eac64d0a","city":"邢台市","district":"沙河市","province":"河北省"},{"_id":"5eba103c88e95627eac64d0f","city":"长治市","district":"平顺县","province":"山西省"},{"_id":"5eba103c88e95627eac64d12","city":"长治市","district":"郊区","province":"山西省"},{"_id":"5eba103c88e95627eac64d15","city":"长治市","district":"屯留县","province":"山西省"},{"_id":"5eba103c88e95627eac64d19","city":"邢台市","district":"南宫市","province":"河北省"},{"_id":"5eba103c88e95627eac64d1c","city":"邢台市","district":"新河县","province":"河北省"},{"_id":"5eba103c88e95627eac64d25","city":"邢台市","district":"柏乡县","province":"河北省"},{"_id":"5eba103c88e95627eac64d2e","city":"长治市","district":"壶关县","province":"山西省"},{"_id":"5eba103c88e95627eac64d30","city":"保定市","district":"定兴县","province":"河北省"},{"_id":"5eba103c88e95627eac64d32","city":"保定市","district":"徐水区","province":"河北省"},{"_id":"5eba103c88e95627eac64d34","city":"保定市","district":"高阳县","province":"河北省"},{"_id":"5eba103c88e95627eac64d36","city":"保定市","district":"唐县","province":"河北省"},{"_id":"5eba103c88e95627eac64d3b","city":"邯郸市","district":"武安市","province":"河北省"},{"_id":"5eba103c88e95627eac64d47","city":"保定市","district":"曲阳县","province":"河北省"},{"_id":"5eba103c88e95627eac64d4c","city":"保定市","district":"蠡县","province":"河北省"},{"_id":"5eba103c88e95627eac64d4e","city":"保定市","district":"高碑店市","province":"河北省"},{"_id":"5eba103c88e95627eac64d52","city":"保定市","district":"望都县","province":"河北省"},{"_id":"5eba103c88e95627eac64d55","city":"保定市","district":"定州市","province":"河北省"},{"_id":"5eba103c88e95627eac64d5a","city":"保定市","district":"顺平县","province":"河北省"},{"_id":"5eba103c88e95627eac64d5c","city":"保定市","district":"容城县","province":"河北省"},{"_id":"5eba103c88e95627eac64d5e","city":"保定市","district":"涿州市","province":"河北省"},{"_id":"5eba103c88e95627eac64d60","city":"保定市","district":"安新县","province":"河北省"},{"_id":"5eba103c88e95627eac64d62","city":"保定市","district":"易县","province":"河北省"},{"_id":"5eba103c88e95627eac64d6b","city":"晋中市","district":"太谷县","province":"山西省"},{"_id":"5eba103c88e95627eac64d74","city":"运城市","district":"盐湖区","province":"山西省"},{"_id":"5eba103c88e95627eac64d79","city":"忻州市","district":"代县","province":"山西省"},{"_id":"5eba103c88e95627eac64d7c","city":"晋中市","district":"灵石县","province":"山西省"},{"_id":"5eba103c88e95627eac64d7f","city":"保定市","district":"博野县","province":"河北省"},{"_id":"5eba103c88e95627eac64d82","city":"忻州市","district":"忻府区","province":"山西省"},{"_id":"5eba103c88e95627eac64d84","city":"晋中市","district":"榆社县","province":"山西省"},{"_id":"5eba103c88e95627eac64d86","city":"运城市","district":"永济市","province":"山西省"},{"_id":"5eba103c88e95627eac64d88","city":"吕梁市","district":"交城县","province":"山西省"},{"_id":"5eba103c88e95627eac64d93","city":"运城市","district":"河津市","province":"山西省"},{"_id":"5eba103c88e95627eac64d95","city":"忻州市","district":"定襄县","province":"山西省"},{"_id":"5eba103c88e95627eac64d97","city":"晋中市","district":"祁县","province":"山西省"},{"_id":"5eba103c88e95627eac64d9a","city":"运城市","district":"芮城县","province":"山西省"},{"_id":"5eba103c88e95627eac64da8","city":"临汾市","district":"襄汾县","province":"山西省"},{"_id":"5eba103c88e95627eac64dab","city":"包头市","district":"固阳县","province":"内蒙古自治区"},{"_id":"5eba103c88e95627eac64daf","city":"临汾市","district":"乡宁县","province":"山西省"},{"_id":"5eba103c88e95627eac64db2","city":"呼和浩特市","district":"土默特左旗","province":"内蒙古自治区"},{"_id":"5eba103c88e95627eac64dbb","city":"忻州市","district":"保德县","province":"山西省"},{"_id":"5eba103c88e95627eac64dbd","city":"包头市","district":"白云鄂博矿区","province":"内蒙古自治区"},{"_id":"5eba103c88e95627eac64dbf","city":"临汾市","district":"侯马市","province":"山西省"},{"_id":"5eba103c88e95627eac64dc1","city":"吕梁市","district":"孝义市","province":"山西省"},{"_id":"5eba103c88e95627eac64dc3","city":"赤峰市","district":"林西县","province":"内蒙古自治区"},{"_id":"5eba103c88e95627eac64dc5","city":"赤峰市","district":"元宝山区","province":"内蒙古自治区"},{"_id":"5eba103c88e95627eac64dc7","city":"吕梁市","district":"汾阳市","province":"山西省"},{"_id":"5eba103c88e95627eac64dca","city":"吕梁市","district":"文水县","province":"山西省"},{"_id":"5eba103c88e95627eac64dcc","city":"包头市","district":"青山区","province":"内蒙古自治区"},{"_id":"5eba103c88e95627eac64dce","city":"忻州市","district":"偏关县","province":"山西省"},{"_id":"5eba103c88e95627eac64dd8","city":"保定市","district":"雄县","province":"河北省"},{"_id":"5eba103c88e95627eac64dda","city":"临汾市","district":"汾西县","province":"山西省"},{"_id":"5eba103c88e95627eac64ddc","city":"呼和浩特市","district":"和林格尔县","province":"内蒙古自治区"},{"_id":"5eba103c88e95627eac64df5","city":"吕梁市","district":"方山县","province":"山西省"},{"_id":"5eba103c88e95627eac64df9","city":"鄂尔多斯市","district":"达拉特旗","province":"内蒙古自治区"},{"_id":"5eba103c88e95627eac64dfb","city":"通辽市","district":"科尔沁区","province":"内蒙古自治区"},{"_id":"5eba103c88e95627eac64dfd","city":"呼和浩特市","district":"新城区","province":"内蒙古自治区"},{"_id":"5eba103c88e95627eac64dfe","city":"鄂尔多斯市","district":"伊金霍洛旗","province":"内蒙古自治区"},{"_id":"5eba103c88e95627eac64e01","city":"临汾市","district":"洪洞县","province":"山西省"},{"_id":"5eba103c88e95627eac64e0d","city":"吕梁市","district":"兴县","province":"山西省"},{"_id":"5eba103c88e95627eac64e0f","city":"忻州市","district":"五寨县","province":"山西省"},{"_id":"5eba103c88e95627eac64e1a","city":"吕梁市","district":"中阳县","province":"山西省"}],"result_code":"success","result_des":"查找成功"}
 ```
+# 按照省份查询
+
+查询条件：where={"province":"陕西省"}
+
+签名：sing=sha1(timestamp=1&where={"province":"陕西省"}&key=1)
 
 
 
+```
+curl https://service.nonedb.com/nonedb_data/city/find -X POST -d '{"where": {"province":"陕西省"},"timestamp":1,"sign":"0af1abe6a6bfbe3ca877f3db75a10d9d916600b7"}' --header "Content-Type: application/json" --header "user:reader" 
+
+```
+
+```
+{"data":[{"_id":"5eba104288e95627eac65811","city":"铜川市","district":"宜君县","province":"陕西省"},{"_id":"5eba104288e95627eac65953","city":"宝鸡市","district":"金台区","province":"陕西省"},{"_id":"5eba104288e95627eac65988","city":"渭南市","district":"富平县","province":"陕西省"},{"_id":"5eba104288e95627eac65999","city":"渭南市","district":"韩城市","province":"陕西省"},{"_id":"5eba104288e95627eac6599b","city":"汉中市","district":"勉县","province":"陕西省"},{"_id":"5eba104288e95627eac6599d","city":"延安市","district":"宝塔区","province":"陕西省"},{"_id":"5eba104288e95627eac659a0","city":"汉中市","district":"西乡县","province":"陕西省"},{"_id":"5eba104288e95627eac659c3","city":"安康市","district":"镇坪县","province":"陕西省"},{"_id":"5eba104388e95627eac65b3c","city":"咸阳市","district":"旬邑县","province":"陕西省"},{"_id":"5eba104488e95627eac660bf","city":"西安市","district":"灞桥区","province":"陕西省"},{"_id":"5eba104488e95627eac66106","city":"铜川市","district":"耀州区","province":"陕西省"},{"_id":"5eba104488e95627eac66147","city":"宝鸡市","district":"陈仓区","province":"陕西省"},{"_id":"5eba104488e95627eac66172","city":"铜川市","district":"印台区","province":"陕西省"},{"_id":"5eba104488e95627eac661b3","city":"咸阳市","district":"彬县","province":"陕西省"},{"_id":"5eba104488e95627eac661cd","city":"渭南市","district":"白水县","province":"陕西省"},{"_id":"5eba104488e95627eac661cf","city":"咸阳市","district":"渭城区","province":"陕西省"},{"_id":"5eba104488e95627eac661d1","city":"延安市","district":"黄陵县","province":"陕西省"},{"_id":"5eba104488e95627eac661df","city":"铜川市","district":"王益区","province":"陕西省"},{"_id":"5eba104488e95627eac661e9","city":"渭南市","district":"合阳县","province":"陕西省"},{"_id":"5eba104488e95627eac661f7","city":"延安市","district":"安塞区","province":"陕西省"},{"_id":"5eba104488e95627eac661f9","city":"宝鸡市","district":"凤县","province":"陕西省"},{"_id":"5eba104488e95627eac6621b","city":"渭南市","district":"临渭区","province":"陕西省"},{"_id":"5eba104488e95627eac66223","city":"延安市","district":"子长县","province":"陕西省"},{"_id":"5eba104488e95627eac6623d","city":"渭南市","district":"潼关县","province":"陕西省"},{"_id":"5eba104488e95627eac6624e","city":"渭南市","district":"华州区","province":"陕西省"},{"_id":"5eba104488e95627eac66250","city":"咸阳市","district":"武功县","province":"陕西省"},{"_id":"5eba104488e95627eac66254","city":"咸阳市","district":"乾县","province":"陕西省"},{"_id":"5eba104488e95627eac66261","city":"宝鸡市","district":"凤翔县","province":"陕西省"},{"_id":"5eba104488e95627eac66263","city":"咸阳市","district":"礼泉县","province":"陕西省"},{"_id":"5eba104488e95627eac6626c","city":"延安市","district":"延长县","province":"陕西省"},{"_id":"5eba104488e95627eac66294","city":"宝鸡市","district":"扶风县","province":"陕西省"},{"_id":"5eba104488e95627eac662ee","city":"渭南市","district":"大荔县","province":"陕西省"},{"_id":"5eba104488e95627eac66355","city":"西安市","district":"高陵区","province":"陕西省"},{"_id":"5eba104588e95627eac664ab","city":"商洛市","district":"洛南县","province":"陕西省"},{"_id":"5eba104588e95627eac664b1","city":"商洛市","district":"柞水县","province":"陕西省"},{"_id":"5eba104588e95627eac664e0","city":"商洛市","district":"商南县","province":"陕西省"},{"_id":"5eba104588e95627eac664fb","city":"商洛市","district":"山阳县","province":"陕西省"},{"_id":"5eba104588e95627eac665a9","city":"商洛市","district":"镇安县","province":"陕西省"},{"_id":"5eba104588e95627eac666a1","city":"宝鸡市","district":"眉县","province":"陕西省"},{"_id":"5eba104588e95627eac666a9","city":"榆林市","district":"米脂县","province":"陕西省"},{"_id":"5eba104588e95627eac666af","city":"榆林市","district":"靖边县","province":"陕西省"},{"_id":"5eba104588e95627eac666b2","city":"榆林市","district":"子洲县","province":"陕西省"},{"_id":"5eba104588e95627eac666b4","city":"汉中市","district":"镇巴县","province":"陕西省"},{"_id":"5eba104588e95627eac666c7","city":"汉中市","district":"佛坪县","province":"陕西省"},{"_id":"5eba104588e95627eac66711","city":"汉中市","district":"留坝县","province":"陕西省"},{"_id":"5eba104588e95627eac66716","city":"榆林市","district":"榆阳区","province":"陕西省"},{"_id":"5eba104588e95627eac66744","city":"安康市","district":"石泉县","province":"陕西省"},{"_id":"5eba104588e95627eac66749","city":"商洛市","district":"丹凤县","province":"陕西省"},{"_id":"5eba104688e95627eac66a04","city":"咸阳市","district":"永寿县","province":"陕西省"},{"_id":"5eba104688e95627eac66a0a","city":"咸阳市","district":"秦都区","province":"陕西省"},{"_id":"5eba104688e95627eac66a92","city":"安康市","district":"白河县","province":"陕西省"},{"_id":"5eba104688e95627eac66a94","city":"榆林市","district":"神木市","province":"陕西省"},{"_id":"5eba104688e95627eac66a9c","city":"榆林市","district":"清涧县","province":"陕西省"},{"_id":"5eba104688e95627eac66a9f","city":"榆林市","district":"佳县","province":"陕西省"},{"_id":"5eba104688e95627eac66aa1","city":"安康市","district":"紫阳县","province":"陕西省"},{"_id":"5eba104688e95627eac66b46","city":"西安市","district":"蓝田县","province":"陕西省"},{"_id":"5eba104688e95627eac66b49","city":"西安市","district":"阎良区","province":"陕西省"},{"_id":"5eba104688e95627eac66b53","city":"西安市","district":"雁塔区","province":"陕西省"},{"_id":"5eba104688e95627eac66b6f","city":"西安市","district":"临潼区","province":"陕西省"},{"_id":"5eba104688e95627eac66c55","city":"延安市","district":"甘泉县","province":"陕西省"},{"_id":"5eba104688e95627eac66c72","city":"西安市","district":"长安区","province":"陕西省"},{"_id":"5eba104688e95627eac66cca","city":"咸阳市","district":"三原县","province":"陕西省"},{"_id":"5eba104688e95627eac66cdf","city":"汉中市","district":"城固县","province":"陕西省"},{"_id":"5eba104688e95627eac66ce5","city":"安康市","district":"岚皋县","province":"陕西省"},{"_id":"5eba104688e95627eac66d2f","city":"安康市","district":"旬阳县","province":"陕西省"},{"_id":"5eba104688e95627eac66d5b","city":"西安市","district":"周至县","province":"陕西省"},{"_id":"5eba104788e95627eac66dba","city":"安康市","district":"宁陕县","province":"陕西省"},{"_id":"5eba104788e95627eac66ddb","city":"西安市","district":"鄠邑区","province":"陕西省"},{"_id":"5eba104788e95627eac66ecb","city":"咸阳市","district":"泾阳县","province":"陕西省"},{"_id":"5eba104788e95627eac66f71","city":"汉中市","district":"南郑区","province":"陕西省"},{"_id":"5eba104788e95627eac67019","city":"榆林市","district":"吴堡县","province":"陕西省"},{"_id":"5eba104888e95627eac67324","city":"宝鸡市","district":"岐山县","province":"陕西省"},{"_id":"5eba104888e95627eac67331","city":"安康市","district":"汉阴县","province":"陕西省"},{"_id":"5eba104888e95627eac67425","city":"咸阳市","district":"淳化县","province":"陕西省"},{"_id":"5eba104888e95627eac6745c","city":"咸阳市","district":"兴平市","province":"陕西省"},{"_id":"5eba104988e95627eac6762e","city":"宝鸡市","district":"太白县","province":"陕西省"},{"_id":"5eba104988e95627eac67751","city":"宝鸡市","district":"麟游县","province":"陕西省"},{"_id":"5eba104988e95627eac677b3","city":"西安市","district":"碑林区","province":"陕西省"},{"_id":"5eba104988e95627eac6780c","city":"西安市","district":"未央区","province":"陕西省"},{"_id":"5eba104988e95627eac67831","city":"西安市","district":"莲湖区","province":"陕西省"},{"_id":"5eba104988e95627eac67849","city":"延安市","district":"志丹县","province":"陕西省"},{"_id":"5eba104988e95627eac6784f","city":"汉中市","district":"宁强县","province":"陕西省"},{"_id":"5eba104988e95627eac6785c","city":"延安市","district":"吴起县","province":"陕西省"},{"_id":"5eba104988e95627eac6785f","city":"西安市","district":"新城区","province":"陕西省"},{"_id":"5eba104988e95627eac6786a","city":"汉中市","district":"汉台区","province":"陕西省"},{"_id":"5eba104988e95627eac6789b","city":"安康市","district":"平利县","province":"陕西省"},{"_id":"5eba104988e95627eac678bc","city":"延安市","district":"富县","province":"陕西省"},{"_id":"5eba104988e95627eac678be","city":"汉中市","district":"洋县","province":"陕西省"},{"_id":"5eba104a88e95627eac67ada","city":"榆林市","district":"横山区","province":"陕西省"},{"_id":"5eba104a88e95627eac67b04","city":"榆林市","district":"府谷县","province":"陕西省"},{"_id":"5eba104a88e95627eac67b88","city":"渭南市","district":"澄城县","province":"陕西省"},{"_id":"5eba104a88e95627eac67b94","city":"延安市","district":"延川县","province":"陕西省"},{"_id":"5eba104a88e95627eac67ba3","city":"延安市","district":"黄龙县","province":"陕西省"},{"_id":"5eba104a88e95627eac67bbe","city":"宝鸡市","district":"千阳县","province":"陕西省"},{"_id":"5eba104a88e95627eac67bc0","city":"咸阳市","district":"杨陵区","province":"陕西省"},{"_id":"5eba104a88e95627eac67bc5","city":"咸阳市","district":"长武县","province":"陕西省"},{"_id":"5eba104a88e95627eac67bc7","city":"宝鸡市","district":"渭滨区","province":"陕西省"},{"_id":"5eba104a88e95627eac67bdb","city":"宝鸡市","district":"陇县","province":"陕西省"},{"_id":"5eba104a88e95627eac67c57","city":"延安市","district":"洛川县","province":"陕西省"},{"_id":"5eba104a88e95627eac67c59","city":"延安市","district":"宜川县","province":"陕西省"}],"result_code":"success","result_des":"查找成功"}
+```
